--- a/KingPIM/KingPIM.Web/Views/Shared/SidebarPartialView.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Shared/SidebarPartialView.cshtml
@@ -28,8 +28,8 @@
             </li>
         }
         <li>
-            <a href="=ResetPassword" class="btn waves-effect red lighten-2 center">
-                Reset password
+            <a href="Home/ChangePassword" class="btn waves-effect red lighten-2 center">
+                Change password
             </a>
         </li>
         @if (User.IsInRole("Admin"))
