--- a/KingPIM/KingPIM.Web/Views/Shared/_AccountLayout.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Shared/_AccountLayout.cshtml
@@ -16,9 +16,6 @@
     @RenderBody()
 
     <script src="~/js/site.js"></script>
-    <script>
-        var select = $('select');
-        var selectInstances = M.FormSelect.init(select/*, options*/);
-    </script>
+    <script src="~/js/accountLayout.min.js"></script>
 </body>
 </html>
