Can save customAttribute

--- a/KingPIM/KingPIM.Web/Views/Category/Index.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Category/Index.cshtml
@@ -27,6 +27,8 @@
                     <tr>
                         <th>Category</th>
                         <th>Published</th>
+                        <th>Added</th>
+                        <th>Updated</th>
                         <th>Version</th>
                         <th></th>
                     </tr>
@@ -77,6 +79,8 @@
 
 
                             </td>
+                            <td>@c.AddedDate.ToString("yyyy-MM-dd")</td>
+                            <td>@c.UpdatedDate.ToString("yyyy-MM-dd")</td>
 
                             <td>@c.Version</td>
                             <td>
