--- a/KingPIM/KingPIM.Web/Views/Product/Index.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Product/Index.cshtml
@@ -26,6 +26,8 @@
                     <tr>
                         <th>Product</th>
                         <th>Published</th>
+                        <th>Added</th>
+                        <th>Updated</th>
                         <th>Price</th>
                         <th>Version</th>
                         <th></th>
@@ -76,6 +78,8 @@
                                 }
 
                             </td>
+                            <td>@p.AddedDate.ToString("yyyy-MM-dd")</td>
+                            <td>@p.UpdatedDate.ToString("yyyy-MM-dd")</td>
                             <td>@String.Format("{0:C}", p.Price)</td>
 
                             <td>@p.Version</td>
@@ -98,7 +102,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td colspan="5">
+                            <td colspan="7">
                                 <div class="row">
                                     <div class="col s6">
                                         @p.Description
@@ -113,103 +117,111 @@
                                                 @*Loops all attributes in the attributeGroup*@
                                                 foreach (var attr in attrGroup.AttributeGroup.ProductAttributes)
                                                 {
-
                                                     var prodAttrValueRow = Model.ProductAttributeValues.FirstOrDefault(x => x.ProductAttribute.Id.Equals(attr.Id) && x.ProductId.Equals(p.Id));
-                                                    
                                                     var prodAttrValueRowValue = prodAttrValueRow?.Value;
 
-                                                    <form asp-action="UpdateAttributeValue" asp-controller="Product" method="post">
-                                                        <input asp-for="ProductAttributeId" type="hidden" value="@attr.Id" />
-                                                        <input asp-for="ProductId" type="hidden" value="@p.Id" />
-                                                        @if (attr.Type == "bool")
-                                                        {
-                                                            <div class="col s8">
-                                                                <label>
-                                                                    @if (prodAttrValueRowValue == "true")
-                                                                    {
-                                                                        <input asp-for="Value" type="checkbox" checked />
-                                                                    }
-                                                                    else
-                                                                    {
-                                                                        <input asp-for="Value" type="checkbox" />
-                                                                    }
-                                                                    <span>@attr.Name</span>
-                                                                </label>
-                                                            </div>
-                                                        }
-                                                        else if (attr.Type == "int" || attr.Type == "string")
-                                                        {
-                                                            <div class="input-field col s8">
-                                                                @if (attr.Type == "int")
+                                                    if (attr.Type == null && attr.PreDeifinedOptions != null)
+                                                    {
+                                                        <form asp-action="UpdateCustomAttributeValue" asp-controller="Product" method="post">
+                                                            <input asp-for="ProductAttributeId" type="hidden" value="@attr.Id" />
+                                                            <input asp-for="ProductId" type="hidden" value="@p.Id" />
+                                                            <select class="browser-default">
+                                                                <option selected disabled>Choose @attr.Name</option>
+                                                                @foreach(var option in attr.PreDeifinedOptions)
                                                                 {
-                                                                    <input asp-for="Value" id="@attr.Name@p.Id" type="number" class="validate" value="@prodAttrValueRowValue" required />
+                                                                    <option>@option.Name</option>
                                                                 }
-                                                                else if (attr.Type == "string")
-                                                                {
-                                                                    <input asp-for="Value" id="@attr.Name@p.Id" type="text" class="validate" value="@prodAttrValueRowValue" required />
-                                                                }
+                                                            </select>
+                                                        </form>
+                                                    }
+                                                    else
+                                                    {
+                                                        <form asp-action="UpdateAttributeValue" asp-controller="Product" method="post">
+                                                            <input asp-for="ProductAttributeId" type="hidden" value="@attr.Id" />
+                                                            <input asp-for="ProductId" type="hidden" value="@p.Id" />
+                                                            @if (attr.Type == "bool")
+                                                            {
+                                                                <div class="col s8">
+                                                                    <label>
+                                                                        @if (prodAttrValueRowValue == "true")
+                                                                        {
+                                                                            <input asp-for="Value" type="checkbox" checked />
+                                                                        }
+                                                                        else
+                                                                        {
+                                                                            <input asp-for="Value" type="checkbox" />
+                                                                        }
+                                                                        <span>@attr.Name</span>
+                                                                    </label>
+                                                                </div>
+                                                            }
+                                                            else if (attr.Type == "int" || attr.Type == "string")
+                                                            {
+                                                                <div class="input-field col s8">
+                                                                    @if (attr.Type == "int")
+                                                                    {
+                                                                        <input asp-for="Value" id="@attr.Name@p.Id" type="number" class="validate" value="@prodAttrValueRowValue" required />
+                                                                    }
+                                                                    else if (attr.Type == "string")
+                                                                    {
+                                                                        <input asp-for="Value" id="@attr.Name@p.Id" type="text" class="validate" value="@prodAttrValueRowValue" required />
+                                                                    }
+                                                                    <label asp-for="Value" for="@attr.Name@p.Id">@attr.Name</label>
+                                                                    <span class="helper-text" data-error="Please enter a @attr.Name"></span>
+                                                                </div>
+                                                            }
+                                                            else if (attr.Type == "color")
+                                                            {
+                                                                <div class="col s8">
 
-                                                                <label asp-for="Value" for="@attr.Name@p.Id">@attr.Name</label>
-                                                                <span class="helper-text" data-error="Please enter a @attr.Name"></span>
+                                                                    <label>
+                                                                        @if (prodAttrValueRowValue != "red")
+                                                                        {
+                                                                            <input asp-for="Value" type="radio" class="with-gap" value="red" />
+                                                                        }
+                                                                        else
+                                                                        {
+                                                                            <input asp-for="Value" type="radio" class="with-gap" value="red" checked />
+                                                                        }
+                                                                        <span>Red</span>
+                                                                    </label>
+                                                                    <label>
+                                                                        @if (prodAttrValueRowValue != "yellow")
+                                                                        {
+                                                                            <input asp-for="Value" type="radio" class="with-gap" value="yellow" />
+                                                                        }
+                                                                        else
+                                                                        {
+                                                                            <input asp-for="Value" type="radio" class="with-gap" value="yellow" checked />
+                                                                        }
+                                                                        <span>Yellow</span>
+                                                                    </label>
+                                                                    <label>
+                                                                        @if (prodAttrValueRowValue != "blue")
+                                                                        {
+                                                                            <input asp-for="Value" type="radio" class="with-gap" value="blue" />
+                                                                        }
+                                                                        else
+                                                                        {
+                                                                            <input asp-for="Value" type="radio" class="with-gap" value="blue" checked />
+                                                                        }
+                                                                        <span>Blue</span>
+                                                                    </label>
+                                                                </div>
+                                                            }
+                                                            <div class="col s4">
+                                                                <button class="btn waves-effect" type="submit">
+                                                                    Save
+                                                                </button>
                                                             </div>
-                                                        }
-                                                        else if (attr.Type == "color")
-                                                        {
-                                                            <div class="col s8">
-                                                                
-                                                                <label>
-                                                                    @if (prodAttrValueRowValue != "red")
-                                                                    {
-                                                                        <input asp-for="Value" type="radio" class="with-gap" value="red" />
-                                                                    }
-                                                                    else
-                                                                    {
-                                                                        <input asp-for="Value" type="radio" class="with-gap" value="red" checked />
-                                                                    }
-                                                                    <span>Red</span>
-                                                                </label>
-                                                                <label>
-                                                                    @if (prodAttrValueRowValue != "yellow")
-                                                                    {
-                                                                        <input asp-for="Value" type="radio" class="with-gap" value="yellow" />
-                                                                    }
-                                                                    else
-                                                                    {
-                                                                        <input asp-for="Value" type="radio" class="with-gap" value="yellow" checked />
-                                                                    }
-                                                                    <span>Yellow</span>
-                                                                </label>
-                                                                <label>
-                                                                    @if (prodAttrValueRowValue != "blue")
-                                                                    {
-                                                                        <input asp-for="Value" type="radio" class="with-gap" value="blue" />
-                                                                    }
-                                                                    else
-                                                                    {
-                                                                        <input asp-for="Value" type="radio" class="with-gap" value="blue" checked />
-                                                                    }
-
-                                                                    <span>Blue</span>
-                                                                </label>
-                                                            </div>
-                                                        }
-
-                                                        <div class="col s4">
-                                                            <button class="btn waves-effect" type="submit">
-                                                                Save
-                                                            </button>
-                                                        </div>
-
-                                                    </form>
-
+                                                        </form>
+                                                    }
                                                 }
                                             }
                                         }
-
                                         <br />
                                     </div>
                                 </div>
-
                                 <hr />
                             </td>
                         </tr>
