--- a/KingPIM/KingPIM.Web/Views/Shared/_Layout.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Shared/_Layout.cshtml
@@ -13,8 +13,8 @@
 
     @RenderBody()
 
-    <script src="~/js/site.min.js"></script>
-    <script src="~/js/layoutScript.min.js"></script>
+    <script src="~/js/site.js"></script>
+    <script src="~/js/layoutScript.js"></script>
 
 </body>
 </html>
