--- a/KingPIM/KingPIM.Web/Views/Shared/_Layout.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     @RenderBody()
 
     <script src="~/js/site.js"></script>
-    <script src="~/js/layoutScript.js"></script>
+    <script src="~/js/layoutScript.min.js"></script>
 
 </body>
 </html>
